add email constraints to the db to prevent any invalid email in the db

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,5 @@
 <h2>Sign up</h2>
-
+<p>Note: In order to simulate an enterprise-grade login system, <strong>you must sign up using an @gmail.com account</strong>. This could be an @anycompany.com account in a real system, but we'll use Gmail to simulate this constraint.</p>
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
